# aili

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  eslint.config.js  package-lock.json  package.json
.github/workflows/: ci.yaml
debugger/: README.md  electron.vite.config.mjs  package.json  typecheck.tsconfig.json  typedoc.json
debugger/assets/banners/: all-deps.txt  no-deps.txt
debugger/assets/favicon/: favicon.icns
debugger/examples/: object-graph.txt
debugger/examples/avl/: avl.c  style.txt
debugger/examples/bfs/: bfs.c  hint.txt  style.txt
debugger/examples/binsearch/: binsearch.c  style.txt
debugger/examples/borderarray/: borderarray.c  style.txt
debugger/examples/bubblesort/: bubblesort.c  style.txt
debugger/src/: ipc.ts
demo/: README.md  index.html  package.json  typecheck.tsconfig.json  vite.config.js
demo/assets/: banner-css.txt  banner-js.txt
demo/src/: index.css  index.ts  logging.ts  pretty-vis.ts  sample-graph.ts  sample-stylesheet.ts  showcase.ts  stylesheet.ts
doc/: stylesheets.md
gdbstate/: Cargo.toml  README.md
gdbstate/src/: construct.rs  hints.rs  lib.rs  state.rs
gdbstate/src/gdbmi/: grammar.rs  mod.rs  parsing.rs  raw_output.rs  result.rs  session.rs  stream.rs  types.rs
gdbstate/tests/: integration_test.rs
gdbstate/tests/utils/: externals.rs  future.rs  gdbmi.rs  mod.rs
hooligan/: README.md  jest.config.js  package.json  typecheck.tsconfig.json  typedoc.json
hooligan/src/: hook.ts  index.ts  logger.ts
hooligan/test/: hook.test.ts  logger.test.ts
jsapi/: Cargo.toml  README.md
jsapi/src/: gdbmi.rs  gdbstate.rs  lib.rs  log.rs  state.rs  state_description.rs  stylesheet.rs  translate.rs  vis.rs
jsapi/src/translate/: mod.rs  property_map.rs
model/: Cargo.toml  README.md
model/src/: lib.rs  state.rs  vis.rs
parser/: Cargo.toml  README.md
parser/src/: connect.rs  grammar.rs  lexer.rs  lib.rs  mock_error_handler.rs  report.rs  symbols.rs
style/: Cargo.toml  README.md
style/src/: lib.rs  selectable.rs
style/src/cascade/: mod.rs  selector_resolver.rs  style.rs
style/src/eval/: context.rs  evaluator.rs  mod.rs  variable_pool.rs
style/src/stylesheet/: expression.rs  mod.rs  selector.rs
style/tests/: eval_test.rs
style/tests/test_graph/: mod.rs
translate/: Cargo.toml  README.md
translate/src/: cascade.rs  expression.rs  flat_selector.rs  flat_stylesheet.rs  lib.rs  select.rs  selectable.rs  selector.rs  stylesheet.rs  test_graph.rs  values.rs
translate/src/cascade/: apply.rs  flat_selector.rs  flat_stylesheet.rs  mapping_builder.rs  mod.rs  select.rs  selector_resolver.rs  style.rs  test_graph.rs
translate/src/cascade/eval/: context.rs  evaluator.rs  mod.rs  test.rs  variable_pool.rs
translate/src/eval/: mod.rs  test.rs
translate/src/forward/: debug.rs  mod.rs  test_vis.rs
translate/src/property/: mod.rs  selectable.rs  symbols.rs  values.rs
translate/src/stylesheet/: expression.rs  mod.rs  selector.rs
translate/tests/: apply_test.rs  forward_test.rs  select_test.rs
translate/tests/test_graph/: mod.rs
translate/tests/test_vis/: mod.rs
vis/: README.md  babel.config.json  package.json  typecheck.tsconfig.json  typedoc.json  vite.config.js
vis/examples/: b-tree.js  b-tree.ts  graph.js  graph.ts  linked-list.js  linked-list.ts  rollup.config.js  structure.js  structure.ts  template.html
vis/src/: attribute-binds.ts  attributes.ts  connector-view.ts  element-view.ts  hook.ts  index.ts  model-factory.ts  model.ts  slots.ts  tree-view.ts  tree.ts  view-container.ts  viewport-dom.css  viewport-dom.ts  viewport.ts
(+102 files in other folders)
