[package]
name = "aili_jsapi"
version = "0.1.0"
edition = "2024"
authors = ["IWonderWhatThisAPIDoes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IWonderWhatThisAPIDoes/aili"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
"js-sys" = "0.3.77"
aili_model = { path = "../model" }
aili_translate = { path = "../translate" }
aili_parser = { path = "../parser" }

