[package]
name = "aili-jsapi"
description = "Interface between Aili modules written in Rust and Javascript"
version = "0.1.0"
edition = "2024"
authors = ["IWonderWhatThisAPIDoes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IWonderWhatThisAPIDoes/aili"

[lib]
crate-type = ["cdylib"]

[features]
gdbstate = ["dep:aili-gdbstate", "dep:wasm-bindgen-futures"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { version = "0.4.50", optional = true }
js-sys = "0.3.77"
aili-model = { path = "../model" }
aili-translate = { path = "../translate" }
aili-parser = { path = "../parser" }
aili-gdbstate = { path = "../gdbstate", optional = true }
