[package]
name = "aili-parser"
description = "Parser for stylesheets used by Aili-Translate"
version = "0.1.0"
edition = "2024"
authors = ["IWonderWhatThisAPIDoes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IWonderWhatThisAPIDoes/aili"

[dependencies]
aili-model = { path = "../model" }
aili-translate = { path = "../translate" }
derive_more = { version = "2.0.1", features = ["debug", "display", "error", "from"] }
logos = "0.15.0"
pomelo = "0.2.0"
