[package]
name = "aili-translate"
description = "Maps Aili State model to Visualization model, statefully, using a stylesheet that describes the mapping"
version = "0.1.0"
edition = "2024"
authors = ["IWonderWhatThisAPIDoes"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/IWonderWhatThisAPIDoes/aili"

[dependencies]
aili-model = { path = "../model" }
derive_more = { version = "2.0.1", features = ["debug", "display", "from"] }
